2005-04-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl: Should be bundle independent now, with (undocumented)
	  API to the bundle specific information (package_* files).

	* sak.tcl: Moved existing name/version variables over to package
	  neutral names. Moved meta data file to package neutral
	  name. Changed the API between sak and meta data file, it is now
	  command oriented. Replaced hardwired package labeling with
	  variables. Moved the bundle specific release cleanup into the
	  meta data file, and made the cleanup code generic. Ditto for the
	  bundle specific critcl definitions. Modified package load to
	  fall back to a regular 'require' if there is no local
	  file containing the package implementation.

	* sak.tcl:         Moved the bundle specific template data
	* package_rpm.txt: into separate file and rewrote the code
	* package_yml.txt: using them to be more regular.
	* package_tip55.txt:

2005-04-04  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl: Extended to handle multiple versions of a package
	  better when comparing and listing versions.

	* apps/tcldocstrip:     New application, an implementation of
	* apps/tcldocstrip.man: docstrip in Tcl, for Tcl. Incl.
	  documentation.

2005-03-31  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* sak.tcl: Added code to regenerate sources of modules whose
	  master sources are in one or more docstrip files. 

	* sak.tcl: Extended the code for the extraction of version
	  information from packages with a heuristic static analysis to
	  cut down on the expense of executing package code. Also made the
	  code more robust for packages importing other packages.

	* sak.tcl: Replaced all internal 'package require' statements with
	  calls to an internal helper which always loads from the local
	  directory tree, i.e. preventing use of an external installation
	  (which may be incompatible). ... Removed triplicate definition